samples/_failures_safe/1761087001_d018f6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_781fe80d.c: In function ‘main’:
./samples/SAFE/__tmp_781fe80d.c:177:16: error: expected ‘;’ at end of input
  177 |         fprintf
      |                ^
      |                ;
./samples/SAFE/__tmp_781fe80d.c:177:9: error: expected declaration or statement at end of input
  177 |         fprintf
      |         ^~~~~~~
./samples/SAFE/__tmp_781fe80d.c:177:9: error: expected declaration or statement at end of input
